--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,3 +1,13 @@
 <div class="container">
-  <h3>App Component works!</h3>
+  <h4>TaskManager</h4>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <app-task-form></app-task-form>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <app-task-list></app-task-list>
+    </div>
+  </div>
 </div>
