--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,1 +1,9 @@
-<app-task *ngFor="let task of tasks; let i = index" [taskInput]="task" [taskIdInput]="i"></app-task>
+<div class="card mt-4" *ngFor="let task of taskList; let i = index">
+  <div class="card-body">
+    <h5>{{task.name}}</h5>
+    <p class="card-text">{{task.description}}</p>
+    <button class="btn btn-dark mr-1">Details</button>
+    <button class="btn btn-warning mr-1">Update</button>
+    <button class="btn btn-danger">Delete</button>
+  </div>
+</div>
