implement delete task v1

--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,9 +1,9 @@
-<div class="card mt-4" *ngFor="let task of taskList; let i = index">
+<div class="card mt-4" *ngFor="let task of taskList">
   <div class="card-body">
     <h5>{{task.name}}</h5>
     <p class="card-text">{{task.description}}</p>
     <button class="btn btn-dark mr-1">Details</button>
     <button class="btn btn-warning mr-1">Update</button>
-    <button class="btn btn-danger">Delete</button>
+    <button class="btn btn-danger" (click)="onDeleteTask(task.id)">Delete</button>
   </div>
 </div>
