implement update task

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4>TaskManager</h4>
+  <h4>Task manager</h4>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <app-task-form></app-task-form>
