--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -1,29 +1,34 @@
 <div class="row">
   <div class="col-12">
-    <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
-      <div class="row">
-        <div class="col-12">
-          <div class="form-group">
-            <label for="name">Task name:</label>
-            <input type="text" id="name" class="form-control" formControlName="name">
-            <span class="text-danger" *ngIf="!taskForm.get('name').valid && taskForm.get('name').touched">Invalid name</span>
+    <div class="card">
+      <div class="card-header">Task form</div>
+      <div class="card-body">
+        <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
+          <div class="row">
+            <div class="col-12">
+              <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" class="form-control" formControlName="name">
+                <span class="text-danger" *ngIf="!taskForm.get('name').valid && taskForm.get('name').touched">Invalid name</span>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="form-group">
-            <label for="description">Description:</label>
-            <textarea id="description" class="form-control" rows="4" formControlName="description"></textarea>
-            <span class="text-danger" *ngIf="!taskForm.get('description').valid && taskForm.get('description').touched">Invalid description</span>
+          <div class="row">
+            <div class="col-12">
+              <div class="form-group">
+                <label for="description">Description:</label>
+                <textarea id="description" class="form-control" rows="4" formControlName="description"></textarea>
+                <span class="text-danger" *ngIf="!taskForm.get('description').valid && taskForm.get('description').touched">Invalid description</span>
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="row">
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary" [disabled]="!taskForm.valid">Submit</button>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary" [disabled]="!taskForm.valid">Submit</button>
-        </div>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
