--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,13 +1,4 @@
+<app-header></app-header>
 <div class="container">
-  <h4>Task manager</h4>
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <app-task-form></app-task-form>
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <app-task-list></app-task-list>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
