--- a/web/src/app/tasks/tasks.component.html
+++ b/web/src/app/tasks/tasks.component.html
@@ -1,1 +1,10 @@
-<p>tasks component works!</p>
+<div class="row justify-content-center mt-4">
+  <div class="col-md-6">
+    <app-task-form></app-task-form>
+  </div>
+</div>
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <app-task-list></app-task-list>
+  </div>
+</div>
