--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-light navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Viet Power</a>
+    <a class="navbar-brand" href="#">My todo</a>
     <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
