--- a/web/src/app/employees/employees.component.html
+++ b/web/src/app/employees/employees.component.html
@@ -1,1 +1,5 @@
-<p>employees works!</p>
+<div class="row justify-content-center">
+  <div class="col-8">
+    <app-employee-list></app-employee-list>
+  </div>
+</div>
