--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-light navbar-light">
+<nav class="navbar navbar-expand-md bg-light navbar-light mb-4">
   <div class="container">
     <a class="navbar-brand" href="#">My todo</a>
     <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,8 +6,8 @@
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/task-management']">Task management</a></li>
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/employees']">Employee List</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/tasks']">Tasks</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/employees']">Employees</a></li>
       </ul>
     </div>
   </div>
