--- a/web/src/app/tasks/tasks.component.html
+++ b/web/src/app/tasks/tasks.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center mt-4">
+<div class="row justify-content-center">
   <div class="col-md-6">
     <app-task-form></app-task-form>
   </div>
