--- a/web/src/app/employees/employee-list/employee-list.component.html
+++ b/web/src/app/employees/employee-list/employee-list.component.html
@@ -1,1 +1,23 @@
-<p>Employee-list works!</p>
+<div class="row">
+  <div class="col-12">
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Task</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let employee of employeeList; let i = index">
+        <th scope="row">{{i + 1}}</th>
+        <td>{{employee.name}}</td>
+        <td>{{employee.email}}</td>
+        <td>{{employee.task}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
