--- a/web/src/app/employees/employees.component.html
+++ b/web/src/app/employees/employees.component.html
@@ -1,3 +1,8 @@
+<div class="row justify-content-center mb-4">
+  <div class="col-8">
+    <app-employee-form></app-employee-form>
+  </div>
+</div>
 <div class="row justify-content-center">
   <div class="col-8">
     <app-employee-list></app-employee-list>
