--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -7,8 +7,8 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" class="form-control" formControlName="name">
+                <label for="task-name">Name:</label>
+                <input type="text" id="task-name" class="form-control" formControlName="name">
                 <span class="text-danger" *ngIf="!taskForm.get('name').valid && taskForm.get('name').touched">Invalid name</span>
               </div>
             </div>
@@ -16,8 +16,8 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label for="description">Description:</label>
-                <textarea id="description" class="form-control" rows="4" formControlName="description"></textarea>
+                <label for="task-description">Description:</label>
+                <textarea id="task-description" class="form-control" rows="4" formControlName="description"></textarea>
                 <span class="text-danger" *ngIf="!taskForm.get('description').valid && taskForm.get('description').touched">Invalid description</span>
               </div>
             </div>
