--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,8 +1,13 @@
 <div class="card mt-4" *ngFor="let task of taskList">
   <div class="card-body">
     <button type="button" class="close text-danger" aria-label="Close" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
-    <h5>{{task.name}}</h5>
+    <h5 class="card-title">{{task.name}}</h5>
     <p class="card-text">{{task.description}}</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Employee: {{task.employee.name}}</li>
+  </ul>
+  <div class="card-body">
     <button class="btn btn-warning" (click)="onEditTask(task.id)">Edit</button>
   </div>
 </div>
