--- a/web/src/app/employees/employees.component.html
+++ b/web/src/app/employees/employees.component.html
@@ -1,10 +1,10 @@
 <div class="row justify-content-center mb-4">
-  <div class="col-8">
+  <div class="col-md-6">
     <app-employee-form></app-employee-form>
   </div>
 </div>
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-md-6">
     <app-employee-list></app-employee-list>
   </div>
 </div>
