--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md bg-light navbar-light mb-4">
+<nav class="navbar navbar-expand-md navbar-light bg-white mb-4">
   <div class="container">
     <a class="navbar-brand" href="#">My todo</a>
-    <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler hidden-sm-up border-0" style="outline: none;" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
