--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-12">
-    <div class="card">
-      <div class="card-header">Task form</div>
+    <div class="card border-0 rounded-0 shadow-lg">
+      <div class="card-header bg-dark text-white border-0 rounded-0">Task form</div>
       <div class="card-body">
         <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
           <div class="row">
             <div class="col-12">
               <div class="form-group">
                 <label for="task-name">Name:</label>
-                <input type="text" id="task-name" class="form-control" formControlName="name">
+                <input type="text" id="task-name" class="form-control border rounded-0" formControlName="name">
                 <span class="text-danger" *ngIf="!taskForm.get('name').valid && taskForm.get('name').touched">Invalid name</span>
               </div>
             </div>
@@ -17,29 +17,23 @@
             <div class="col-12">
               <div class="form-group">
                 <label for="task-description">Description:</label>
-                <textarea id="task-description" class="form-control" rows="4" formControlName="description"></textarea>
+                <textarea id="task-description" class="form-control border rounded-0" rows="4" formControlName="description"></textarea>
                 <span class="text-danger" *ngIf="!taskForm.get('description').valid && taskForm.get('description').touched">Invalid description</span>
               </div>
             </div>
           </div>
           <div class="row mb-3 mt-1">
             <div class="col-12">
-              <div ngbDropdown class="d-inline-block">
-                <button class="btn btn-outline-secondary" id="task-assign" type="button" ngbDropdownToggle>{{employeeSelected === null  ? 'Select employee' : employeeSelected.name}}</button>
-                <div ngbDropdownMenu aria-labelledby="task-assign">
-                  <button ngbDropdownItem type="button" *ngFor="let employee of employeeList" (click)="onAssignEmployee(employee)">{{employee.name}}</button>
-                </div>
+              <div class="d-inline-block">
+                <select class="btn border rounded-0" (ngModelChange)="onAssignEmployee($event)" formControlName="employee">
+                  <option *ngFor="let employee of employeeList" [ngValue]="employee">{{employee.name}}</option>
+                </select>
               </div>
             </div>
           </div>
-<!--          <div class="row" *ngIf="employeeSelected !== null">-->
-<!--            <div class="col-6">-->
-<!--              <p>{{employeeSelected.name}}</p>-->
-<!--            </div>-->
-<!--          </div>-->
           <div class="row">
             <div class="col-12">
-              <button type="submit" class="btn btn-primary" [disabled]="!taskForm.valid">{{editMode ? 'Update task' : 'Add task'}}</button>
+              <button type="submit" class="btn btn-primary rounded-0" [disabled]="!taskForm.valid">{{editMode ? 'Update task' : 'Add task'}}</button>
             </div>
           </div>
 
