--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,6 +1,6 @@
-<div class="card mt-4" *ngFor="let task of taskList">
+<div class="card mt-4 shadow-lg border-0 rounded-0" *ngFor="let task of taskList">
   <div class="card-body">
-    <button type="button" class="close text-danger" aria-label="Close" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
+    <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
     <h5 class="card-title">{{task.name}}</h5>
     <p class="card-text">{{task.description}}</p>
   </div>
@@ -8,6 +8,6 @@
     <li class="list-group-item">Employee: {{task.employee.name}}</li>
   </ul>
   <div class="card-body">
-    <button class="btn btn-warning" (click)="onEditTask(task.id)">Edit</button>
+    <button class="btn btn-warning rounded-0" type="button" (click)="onEditTask(task.id)">Edit task</button>
   </div>
 </div>
