update employees ui

--- a/web/src/app/employees/employee-list/employee-list.component.html
+++ b/web/src/app/employees/employee-list/employee-list.component.html
@@ -1,25 +1,24 @@
-<div class="row">
+<div class="row mt-4">
   <div class="col-12">
-    <table class="table">
-      <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Task</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let employee of employeeList; let i = index">
-        <th scope="row">{{i + 1}}</th>
-        <td>{{employee.name}}</td>
-        <td>{{employee.email}}</td>
-        <td>{{employee.task === null ? '' : employee.task.name}}</td>
-      </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive shadow-lg">
+      <table class="table table-borderless table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Task</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let employee of employeeList; let i = index">
+            <th scope="row">{{i + 1}}</th>
+            <td>{{employee.name}}</td>
+            <td>{{employee.email}}</td>
+            <td>{{employee.task === null ? '' : employee.task.name}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
-
-
-
