--- a/web/src/app/employees/employee-form/employee-form.component.html
+++ b/web/src/app/employees/employee-form/employee-form.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-12">
-    <div class="card">
-      <div class="card-header">Employee form</div>
+    <div class="card rounded-0 shadow-lg border-0">
+      <div class="card-header bg-dark border-0 text-white rounded-0">Employee form</div>
       <div class="card-body">
         <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
           <div class="row">
             <div class="col-12">
               <div class="form-group">
                 <label for="employee-name">Name:</label>
-                <input type="text" id="employee-name" formControlName="name" class="form-control">
+                <input type="text" id="employee-name" formControlName="name" class="form-control rounded-0 border">
               </div>
             </div>
           </div>
@@ -16,13 +16,13 @@
             <div class="col-12">
               <div class="form-group">
                 <label for="employee-email">Email:</label>
-                <input type="email" id="employee-email" formControlName="email" class="form-control">
+                <input type="email" id="employee-email" formControlName="email" class="form-control rounded-0 border">
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <button class="btn btn-primary" type="submit">Submit</button>
+              <button class="btn btn-primary rounded-0" type="submit">Submit</button>
             </div>
           </div>
         </form>
