implement edit employee in task

--- a/web/src/app/employees/employee-list/employee-list.component.html
+++ b/web/src/app/employees/employee-list/employee-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
     <div class="table-responsive shadow-lg">
       <table class="table table-borderless table-hover">
-        <thead class="thead-dark">
+        <thead>
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
