--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-4">
   <div class="col-12">
     <div class="card border-0 rounded-0 shadow-lg">
       <div class="card-header bg-dark text-white border-0 rounded-0">Task form</div>
@@ -24,7 +24,9 @@
           </div>
           <div class="row mb-3 mt-1">
             <div class="col-12">
-              <div class="d-inline-block">
+              <label>Employee:</label>
+              <br>
+              <div class="d-inline-block mb-2">
                 <select class="btn border rounded-0" (ngModelChange)="onAssignEmployee($event)" formControlName="employee">
                   <option *ngFor="let employee of employeeList" [ngValue]="employee">{{employee.name}}</option>
                 </select>
