auto add updated/deleted tasks to employee table

--- a/web/src/app/employees/employee-form/employee-form.component.html
+++ b/web/src/app/employees/employee-form/employee-form.component.html
@@ -22,7 +22,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <button class="btn btn-primary rounded-0" type="submit">Submit</button>
+              <button class="btn btn-primary rounded-0 mt-1" type="submit">Submit</button>
             </div>
           </div>
         </form>
