--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -9,6 +9,9 @@
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/tasks']">Tasks</a></li>
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/employees']">Employees</a></li>
       </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" style="cursor: pointer;" [routerLink]="['/login']">Login</a></li>
+      </ul>
     </div>
   </div>
 </nav>
