--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -9,14 +9,6 @@
               <div class="row">
                 <div class="col-12">
                   <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" formControlName="username" class="form-control rounded-0 border">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-12">
-                  <div class="form-group">
                     <label for="username">Username:</label>
                     <input type="text" id="username" formControlName="username" class="form-control rounded-0 border">
                   </div>
@@ -26,15 +18,23 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" formControlName="password" class="form-control rounded-0 border">
+                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control rounded-0 border">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-12">
                   <div class="form-group">
-                    <label for="phone">Phone number:</label>
-                    <input type="tel" id="phone" formControlName="phone" class="form-control rounded-0 border">
+                    <label for="name">Full name:</label>
+                    <input type="text" id="name" formControlName="name" class="form-control rounded-0 border">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" formControlName="email" class="form-control rounded-0 border">
                   </div>
                 </div>
               </div>
@@ -43,7 +43,7 @@
                   <button class="btn btn-primary rounded-0 mt-1">Register</button>
                 </div>
               </div>
-              <div class="row mt-1">
+              <div class="row mt-2">
                 <div class="col-12">
                   <small class="text-muted">Already have an account? <a [routerLink]="['/login']">Login</a></small>
                 </div>
