--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -6,18 +6,21 @@
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" *ngIf="this.authService.isUserAuthorize()" routerLinkActive="active">
+        <li class="nav-item" *ngIf="this.authService.isAdmin()" routerLinkActive="active">
           <a class="nav-link" style="cursor: pointer;" [routerLink]="['/tasks']">Tasks</a>
         </li>
-        <li class="nav-item" *ngIf="this.authService.isUserAuthorize()" routerLinkActive="active">
+        <li class="nav-item" *ngIf="this.authService.isAdmin()" routerLinkActive="active">
           <a class="nav-link" style="cursor: pointer;" [routerLink]="['/employees']">Employees</a>
+        </li>
+        <li class="nav-item" *ngIf="this.authService.isUser() && !this.authService.isAdmin()" routerLinkActive="active">
+          <a class="nav-link" style="cursor: pointer;" [routerLink]="['/employee-profile']">Profile</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item" *ngIf="!this.authService.isUserAuthorize()" routerLinkActive="active">
+        <li class="nav-item" *ngIf="!this.authService.isUser()" routerLinkActive="active">
           <a class="nav-link" style="cursor: pointer;" [routerLink]="['/login']">Login</a>
         </li>
-        <li class="nav-item" *ngIf="this.authService.isUserAuthorize()" routerLinkActive="active">
+        <li class="nav-item" *ngIf="this.authService.isUser()" routerLinkActive="active">
           <a style="cursor: pointer;" class="nav-link" [routerLink]="['/login']" (click)="this.authService.logOut()">Log out</a>
         </li>
       </ul>
