--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -12,8 +12,8 @@
         <li class="nav-item" *ngIf="this.authService.isAdmin()" routerLinkActive="active">
           <a class="nav-link" style="cursor: pointer;" [routerLink]="['/employees']">Employees</a>
         </li>
-        <li class="nav-item" *ngIf="this.authService.isUser() && !this.authService.isAdmin()" routerLinkActive="active">
-          <a class="nav-link" style="cursor: pointer;" [routerLink]="['/employee-profile']">Profile</a>
+        <li class="nav-item" *ngIf="this.authService.isUser() || this.authService.isAdmin()" routerLinkActive="active">
+          <a class="nav-link" style="cursor: pointer;" [routerLink]="['/profile']">Profile</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
