--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -1,1 +1,34 @@
-<p>employee-profile works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card mb-4 shadow border-0 rounded-0">
+          <div class="card-body mb-0">
+            <p class="h5">Account info</p>
+            <hr>
+            <p class="h6">Username:</p>
+            <p>{{employee.username}}</p>
+            <p class="h6">Full name:</p>
+            <p>{{employee.name}}</p>
+            <p class="h6">Email:</p>
+            <p>{{employee.email}}</p>
+            <button class="btn btn-dark rounded-0">Edit account info</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="card shadow border-0 rounded-0" *ngIf="employee.task !== null">
+          <div class="card-body mb-0">
+            <p class="card-title h5">{{employee.task?.name}}</p>
+            <hr>
+            <p class="h6">Description:</p>
+            <p>{{employee.task?.description}}</p>
+          </div>
+        </div>
+        <div class="alert alert-warning border-0 rounded-0" *ngIf="employee.task === null">
+          There's no task to work on.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
