--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <div class="row">
       <div class="col-12">
-        <div class="card rounded-0 shadow-lg border-0">
+        <div class="card rounded-0 shadow border-0">
           <div class="card-header bg-dark border-0 text-white rounded-0">Login form</div>
           <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -10,7 +10,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" formControlName="username" class="form-control rounded-0 border">
+                    <input type="text" id="username" formControlName="username" class="form-control rounded-0">
                   </div>
                 </div>
               </div>
@@ -18,7 +18,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control rounded-0 border">
+                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control rounded-0">
                   </div>
                 </div>
               </div>
