--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,12 +1,12 @@
-<div class="card mb-4 shadow-lg border-0 rounded-0" *ngFor="let task of taskList">
+<div class="card mb-4 shadow border-0 rounded-0" *ngFor="let task of taskList">
   <div class="card-body mb-0">
     <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
-    <h4 class="card-title">{{task.name}}</h4>
+    <p class="card-title h5">{{task.name}}</p>
     <hr>
-    <h6>Description:</h6>
+    <p class="h6">Description:</p>
     <p>{{task.description}}</p>
-    <h6>Employee:</h6>
+    <p class="h6">Employee:</p>
     <p>{{task.employee.name}}</p>
-    <button class="btn btn-warning rounded-0" type="button" (click)="onEditTask(task.id)">Edit task</button>
+    <button class="btn btn-dark rounded-0" type="button" (click)="onEditTask(task.id)">Edit task</button>
   </div>
 </div>
