--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
+.form-control:focus {
+  border-color: #007BFF;
+  box-shadow: none !important;
+}
