--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -21,8 +21,13 @@
           <div class="card-body mb-0">
             <p class="card-title h5">{{employee.task?.name}}</p>
             <hr>
+            <div class="alert alert-success border-0 rounded-0" *ngIf="isDone">Waiting for confirmation</div>
             <p class="h6">Description:</p>
             <p>{{employee.task?.description}}</p>
+            <p class="h6">Status:</p>
+            <p>{{employee.task?.status}}</p>
+            <button class="btn btn-primary rounded-0" (click)="onAccept()" *ngIf="!isDoing && !isDone">Accept task</button>
+            <button class="btn btn-success rounded-0" (click)="onDone()" *ngIf="isDoing">Done</button>
           </div>
         </div>
         <div class="alert alert-warning border-0 rounded-0" *ngIf="employee.task === null">
