improve employee dropdown display

--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -27,8 +27,14 @@
               <label>Employee:</label>
               <br>
               <div class="d-inline-block">
-                <select class="btn rounded-0 form-control" style="border: 1px solid #ced4da;" (ngModelChange)="onAssignEmployee($event)" formControlName="employee">
+                <!--display employee list if not in edit mode, otherwise display employee list in edit-->
+                <select class="btn rounded-0 form-control" *ngIf="!editMode"
+                        style="border: 1px solid #ced4da;" (ngModelChange)="onAssignEmployee($event)" formControlName="employee">
                   <option *ngFor="let employee of employeeList" [ngValue]="employee">{{employee.name}}</option>
+                </select>
+                <select class="btn rounded-0 form-control" *ngIf="editMode"
+                        style="border: 1px solid #ced4da;" (ngModelChange)="onAssignEmployee($event)" formControlName="employee">
+                  <option *ngFor="let employee of employeeListInEdit" [ngValue]="employee">{{employee.name}}</option>
                 </select>
               </div>
             </div>
