--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -8,9 +8,11 @@
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
               <div class="row">
                 <div class="col-12">
+                  <div class="alert alert-danger mb-3 rounded-0 border-0" *ngIf="errorMessage">{{this.errorMessage}}</div>
                   <div class="form-group">
                     <label for="username">Username:</label>
                     <input type="text" id="username" formControlName="username" class="form-control rounded-0">
+                    <span class="text-danger" *ngIf="isEmptyField('username')">Invalid username</span>
                   </div>
                 </div>
               </div>
@@ -19,6 +21,7 @@
                   <div class="form-group">
                     <label for="password">Password:</label>
                     <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control rounded-0">
+                    <span class="text-danger" *ngIf="isEmptyField('password')">Invalid password</span>
                   </div>
                 </div>
               </div>
