--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -9,7 +9,7 @@
               <div class="form-group">
                 <label for="task-name">Name:</label>
                 <input type="text" id="task-name" class="form-control rounded-0" formControlName="name">
-                <span class="text-danger" *ngIf="!taskForm.get('name').valid && taskForm.get('name').touched">Invalid name</span>
+                <span class="text-danger" *ngIf="isEmptyField('name')">Invalid name</span>
               </div>
             </div>
           </div>
@@ -18,7 +18,7 @@
               <div class="form-group">
                 <label for="task-description">Description:</label>
                 <textarea id="task-description" class="form-control rounded-0" rows="4" formControlName="description"></textarea>
-                <span class="text-danger" *ngIf="!taskForm.get('description').valid && taskForm.get('description').touched">Invalid description</span>
+                <span class="text-danger" *ngIf="isEmptyField('description')">Invalid description</span>
               </div>
             </div>
           </div>
