--- a/web/src/app/employees/employee-edit/employee-edit.component.html
+++ b/web/src/app/employees/employee-edit/employee-edit.component.html
@@ -1,10 +1,13 @@
 <div class="modal-content">
-  <div class="modal-body">
-    <button type="button" style="outline: none;" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
+  <div class="modal-header rounded-0 border-0 bg-dark text-white py-0 px-3">
+    <p style="padding-top: 0.8rem;">Update account</p>
+    <button type="button" style="outline: none;" class="close py-0 mb-0 mt-2" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+      <span aria-hidden="true" class="h4 text-white">&times;</span>
     </button>
+  </div>
+  <div class="modal-body">
     <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
-      <div class="row mt-4">
+      <div class="row">
         <div class="col-12">
           <div class="form-group">
             <label for="username">Username:</label>
