--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-md-8">
-        <div class="card shadow border-0 rounded-0" *ngIf="employee.task !== null">
+        <div class="card shadow border-0 rounded-0" *ngIf="employee.task !== null; else notShow">
           <div class="card-body mb-0">
             <p class="card-title h5">{{employee.task?.name}}</p>
             <hr>
@@ -30,9 +30,11 @@
             <button class="btn btn-success rounded-0" (click)="onDone()" *ngIf="isDoing">Done</button>
           </div>
         </div>
-        <div class="alert alert-warning border-0 rounded-0" *ngIf="employee.task === null">
-          There's no task to work on.
-        </div>
+        <ng-template #notShow>
+          <div class="alert alert-warning border-0 rounded-0">
+            There's no task to work on.
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
