--- a/web/src/app/employees/employee-list/employee-list.component.html
+++ b/web/src/app/employees/employee-list/employee-list.component.html
@@ -1,8 +1,8 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center mb-4">
   <div class="col-md-7">
     <div class="row mt-4">
       <div class="col-12">
-        <div class="table-responsive shadow">
+        <div class="table-responsive shadow rounded-lg">
           <table class="table table-borderless table-hover">
             <thead>
             <tr>
