--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4 shadow border-0 rounded-0">
+<div class="card mb-4 shadow border-0 rounded-lg">
   <div class="card-body mb-0">
     <p class="h5">Account info</p>
     <hr>
@@ -6,6 +6,6 @@
     <p>{{employee.name}}</p>
     <p class="h6">Email:</p>
     <p>{{employee.email}}</p>
-    <button class="btn btn-dark rounded-0" (click)="onEdit()">Edit account info</button>
+    <button class="btn btn-dark rounded-sm" (click)="onEdit()">Edit account info</button>
   </div>
 </div>
