--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-light bg-white mb-4">
   <div class="container">
     <a class="navbar-brand" href="#">Task manager</a>
-    <button class="navbar-toggler hidden-sm-up border-0" style="outline: none;" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler hidden-sm-up border-0 pr-0" style="outline: none;" type="button" (click)="onMenu()" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <i class='material-icons' *ngIf="isOpen">clear</i>
+      <i class="material-icons" *ngIf="!isOpen">menu</i>
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
       <ul class="navbar-nav mr-auto">
