--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4 shadow border-0 rounded-0" *ngFor="let task of taskList">
+<div class="card mb-4 shadow border-0 rounded-lg" *ngFor="let task of taskList">
   <div class="card-body mb-0">
     <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
     <p class="card-title h5">{{task.name}}</p>
@@ -9,7 +9,7 @@
     <p>{{task.employee.name}}</p>
     <p class="h6">Status:</p>
     <p>{{task.status}}</p>
-    <button class="btn btn-dark rounded-0 mr-2" type="button" (click)="onEditTask(task.id)">Edit task</button>
-    <button class="btn btn-warning rounded-0" type="button" (click)="onArchiveTask(task)" *ngIf="task.status === 'DONE'">Archive task</button>
+    <button class="btn btn-dark rounded-sm mr-2" type="button" (click)="onEditTask(task.id)">Edit task</button>
+    <button class="btn btn-outline-success rounded-sm" type="button" (click)="onArchiveTask(task)" *ngIf="task.status === 'DONE'">Archive task</button>
   </div>
 </div>
