--- a/web/src/app/tasks/tasks.component.html
+++ b/web/src/app/tasks/tasks.component.html
@@ -1,10 +1,10 @@
 <div class="row justify-content-center">
-  <div class="col-md-6">
+  <div class="col-xl-6 col-lg-7 col-md-7">
     <app-task-form></app-task-form>
   </div>
 </div>
 <div class="row justify-content-center">
-  <div class="col-md-6">
+  <div class="col-xl-6 col-lg-7 col-md-7">
     <app-task-list></app-task-list>
   </div>
 </div>
