implement basic search and update task ui

--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-white mb-4">
   <div class="container">
-    <a class="navbar-brand">Task manager</a>
+    <a class="navbar-brand">Task Manager</a>
     <button class="navbar-toggler hidden-sm-up border-0 pr-0" style="outline: none;" type="button" (click)="onMenu()" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
       <i class='material-icons' *ngIf="isOpen">clear</i>
       <i class="material-icons" *ngIf="!isOpen">menu</i>
