--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -1,7 +1,7 @@
 <div class="row mb-4">
   <div class="col-12">
     <div class="card border-0 rounded-lg shadow">
-      <div class="card-header bg-dark text-white border-0 rounded-0">Task form</div>
+      <div class="card-header bg-dark text-white border-0 rounded-0">Task Form</div>
       <div class="card-body">
         <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
           <div class="row">
