--- a/web/src/app/archives/archives.component.html
+++ b/web/src/app/archives/archives.component.html
@@ -1,12 +1,12 @@
 <div class="row justify-content-center">
   <div class="col-lg-6 col-md-7 mb-4">
-    <form [formGroup]="searchForm">
+    <form [formGroup]="searchForm" (ngSubmit)="onSubmitSearch()">
       <div class="form-group rounded-lg border shadow-sm">
         <div class="input-group input-group-lg">
           <div class="input-group-append">
             <span class="input-group-text border-0 bg-transparent"><i class="material-icons">search</i></span>
           </div>
-          <input type="text" class="form-control border-0" placeholder="Search task archive">
+          <input type="text" class="form-control border-0" formControlName="query" placeholder="Search task archive">
         </div>
       </div>
     </form>
@@ -16,13 +16,10 @@
   <div class="col-md-4" *ngFor="let archive of archiveList">
     <div class="card rounded-lg shadow border-0 mb-4">
       <div class="card-body">
-        <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteArchive(archive.id)"><span aria-hidden="true">&times;</span></button>
-        <p class="h5">{{archive.name}}</p>
-        <hr>
-        <p class="h6">Description:</p>
-        <p>{{archive.description}}</p>
-        <p class="h6">Employee:</p>
-        <p>{{archive.employeeName}}</p>
+        <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteArchive(archive.id)"><i class="material-icons" style="font-size: 20px">clear</i></button>
+        <p class="h5 mb-1" style="text-transform: uppercase;">{{archive.name}}</p>
+        <p class="mb-0">{{archive.description}}</p>
+        <p class="mb-0">{{archive.employeeName}}</p>
       </div>
     </div>
   </div>
