--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-12">
           <div class="form-group">
-            <label for="name">Full name:</label>
+            <label for="name">Full name</label>
             <input type="text" id="name" formControlName="name" class="form-control rounded-sm bg-light">
           </div>
         </div>
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-12">
           <div class="form-group">
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <input type="email" id="email" formControlName="email" class="form-control rounded-sm bg-light">
           </div>
         </div>
