--- a/web/src/app/page-not-found/page-not-found.component.html
+++ b/web/src/app/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <div class="card shadow border-0 rounded-0">
+    <div class="card shadow border-0 rounded-lg">
       <div class="card-body">
         <p class="display-4 text-center">Page not found.</p>
       </div>
