--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,15 +1,17 @@
 <div class="card mb-4 shadow border-0 rounded-lg" *ngFor="let task of taskList">
   <div class="card-body mb-0">
-    <button type="button" class="close text-danger" aria-label="Close" style="outline: none;" (click)="onDeleteTask(task.id)"><span aria-hidden="true">&times;</span></button>
-    <p class="card-title h5">{{task.name}}</p>
-    <hr>
-    <p class="h6">Description:</p>
-    <p>{{task.description}}</p>
-    <p class="h6">Employee:</p>
-    <p>{{task.employee.name}}</p>
-    <p class="h6">Status:</p>
-    <p>{{task.status}}</p>
-    <button class="btn btn-dark rounded-sm mr-2" type="button" (click)="onEditTask(task.id)">Edit task</button>
-    <button class="btn btn-outline-success rounded-sm" type="button" (click)="onArchiveTask(task)" *ngIf="task.status === 'DONE'">Archive task</button>
+    <!--change text color based on status-->
+    <div class="close text-danger">
+      <a class="mr-2" (click)="onEditTask(task.id)"><i class="material-icons" style="font-size: 20px; cursor:pointer;">edit</i></a>
+      <a (click)="onDeleteTask(task.id)"><i class="material-icons" style="font-size: 20px; cursor:pointer;">clear</i></a>
+    </div>
+    <div>
+      <p class="h5 mb-1 text-danger" style="text-transform: uppercase;">{{task.name}}
+        <span></span>
+      </p>
+      <p class="mb-0">{{task.description}}</p>
+      <p class="mb-0">{{task.employee.name}}</p>
+      <button class="btn btn-outline-success rounded-sm" type="button" (click)="onArchiveTask(task)" *ngIf="task.status === 'DONE'">Archive task</button>
+    </div>
   </div>
 </div>
