--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -6,6 +6,7 @@
         <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
           <div class="row">
             <div class="col-12">
+              <div class="alert alert-danger border-0 rounded-lg mb-3" *ngIf="errorMessage">{{this.errorMessage}}</div>
               <div class="form-group">
                 <label for="task-name">Name</label>
                 <input type="text" id="task-name" class="form-control bg-light rounded-sm" formControlName="name">
@@ -41,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <button type="submit" class="btn btn-primary rounded-sm mt-1" [disabled]="!taskForm.valid">{{editMode ? 'Update task' : 'Add task'}}</button>
+              <button type="submit" class="btn btn-primary rounded-sm mt-1">{{editMode ? 'Update task' : 'Add task'}}</button>
             </div>
           </div>
         </form>
